After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673015 - label doesn't support files with odd names
label doesn't support files with odd names
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Background
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-03-28 18:43 UTC by William Jon McCann
Modified: 2012-06-14 17:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Escape wallpaper filename before display (1.12 KB, patch)
2012-03-28 19:11 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-03-28 18:43:30 UTC
When I load up the following files in the Pictures folder the background updates in the preview but the label doesn't get updated.

mariomoreno_7.jpg?pathrev=126438&revision=126438
waltersoestbergen_0.jpg?pathrev=126438&revision=126438

For example from:
https://src.chromium.org/viewvc/chrome/trunk/src/ui/resources/aura/wallpapers/?pathrev=126438

I get the following error on the command line:
(gnome-control-center:16743): Gtk-WARNING **: Failed to set text from markup due to error parsing markup: Error on line 1: Entity did not end with a semicolon; most likely you used an ampersand character without intending to start an entity - escape ampersand as &
Comment 1 William Jon McCann 2012-03-28 19:11:10 UTC
Created attachment 210807 [details] [review]
Escape wallpaper filename before display
Comment 2 Bastien Nocera 2012-03-28 21:52:11 UTC
Review of attachment 210807 [details] [review]:

Put "background: " before the subject line for the commit message.

Looks good otherwise.