background: Escape wallpaper filename before display

https://bugzilla.gnome.org/show_bug.cgi?id=673015